add .once to libraries.yml

--- a/aov_builder.libraries.yml
+++ b/aov_builder.libraries.yml
@@ -4,4 +4,5 @@ build_calculator:
     js/build_calculator.js: {}
   dependencies:
     - core/jquery
+	- core/jquery.once
     - core/drupalSettings
